# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml  general.yml
migrations/: 20230504181224_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
